[package]
name = "sIMU"
version = "0.1.0"
authors = ["Paul Lesur <paul.lesur@exotec.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kiss3d = "0.30.0"
nalgebra = "0.25.3"
rand = "0.8.3"
rand_distr = "0.4.0"
termcolor = "1.1.2"
