[package]
name = "s_imu"
version = "0.1.0"
authors = ["Paul Lesur <paul.lesur@exotec.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.8.3"
kiss3d = "0.30.0"
log = "0.4.14"
nalgebra = "0.25.3"
rand = "0.8.3"
rand_distr = "0.4.0"
termcolor = "1.1.2"
